Closed Bug 1775627 Opened 2 years ago Closed 2 years ago

Perma browser/base/content/test/performance/browser_preferences_usage.js | single tracking bug

Categories

(Core :: Performance, defect, P3)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- unaffected
firefox104 --- unaffected
firefox105 --- fixed

People

(Reporter: jmaher, Assigned: timhuang)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

No description provided.

Additional information about this bug failures and frequency patterns can be found by running: ./mach test-info failure-report --bug 1775627

Depends on: 1767358
No longer depends on: 1767358
Blocks: 1782557

This test is perma-failing

Flags: needinfo?(daisuke)
Regressed by: 1776609
Summary: Intermittent browser/base/content/test/performance/browser_preferences_usage.js | single tracking bug → Perma browser/base/content/test/performance/browser_preferences_usage.js | single tracking bug

Set release status flags based on info from the regressing bug 1776609

I'm sorry, I realized this bug today, but it seems that the intermittent failure I increased was fixed in bug 1782557.

Flags: needinfo?(daisuke)
Assignee: nobody → tihuang
Status: NEW → ASSIGNED
Flags: needinfo?(tihuang)

This patch make the pref value of the Email WebApp domain pref to be
cached in the memory. So, we won't get the pref everytime we access the
pref value. The cached pref value will be updated when the pref changes.

Whiteboard: [stockwell disable-recommended] → [stockwell needswork:owner]
Pushed by tihuang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2fba7ebaf469
Caching the Email WebApp domain pref. r=dimi
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

(In reply to Brad Werth [:bradwerth] from comment #26)

I just had a crash on macOS that seems to be due to a null pointer dereference at https://searchfox.org/mozilla-central/rev/497076b5edd0f906ae088cdf224e45896162694b/netwerk/url-classifier/UrlClassifierFeatureEmailTrackingDataCollection.cpp#201. There may be more work to do here.

That sounds like bug 1784983.

Right, bug 1784983 addresses the crash issue.

Flags: needinfo?(tihuang)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: